--- a/voyager/templates/carousel/instagram.html
+++ b/voyager/templates/carousel/instagram.html
@@ -1,5 +1,6 @@
 <div class="title-divs instagram-screen">
 	<div class="background-smolder carousel-smolder"></div>
+	<div class="title-logo-background"></div>
 	<div class="arrow-wrapper-left" data-value="valve">
 		<div class="arrow-left"></div>
 	</div>
@@ -7,11 +8,11 @@
 		<div class="arrow-right"></div>
 	</div>
 	<div class="carousel-container">
-		<h1 class="main-title"> Instagram </h1>
-<!-- 		<div class="title-logo">
+		<!-- <h1 class="main-title"> Instagram </h1> -->
+		<div class="title-logo">
 			<div class="instagram-logo"></div>
-		</div> -->
-		<p class="sub-title"> First line of text that is only used for filler purposes <br>
+		</div>
+		<p class="sub-title-black"> First line of text that is only used for filler purposes <br>
 			Second line of text that is only used for filler purposes </p>
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
