--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -41,7 +41,7 @@ done in the HTML as so -->
 	</div>
  	<div class="text-frame">
  		<div class="text-wrapper">
-	 		<h1> Our Members </h1>
+	 		<h1 class="panel-title"> Our Members </h1>
 	 		<p class="sub-title"> some lines of text describing how our members are so cool </p>
 	 	</div>
 	</div> 
@@ -67,7 +67,7 @@ done in the HTML as so -->
 		<div class="grid-member-picture microsoft-picture"></div>
 	</div>
  	<div class="text-frame-logo">
- 		<h1> Our Companies </h1>
+ 		<h1 class="panel-title"> Our Companies </h1>
  		<p class="sub-title table-style"> some lines of text describing how our members are able to make it to these prestigious companies </p>
 	</div> 
 </div>
@@ -75,22 +75,22 @@ done in the HTML as so -->
 
 <div class="title-divs redirect-display">
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box">
+		<div class="redirect-title-box topleft">
 			<h3 class="redirect-title"> Clients </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box">
+		<div class="redirect-title-box topright">
 			<h3 class="redirect-title"> History </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box">
+		<div class="redirect-title-box bottomleft">
 			<h3 class="redirect-title"> Apply </h3>
 		</div>
 	</div>
 	<div class="six columns redirect-box">
-		<div class="redirect-title-box">
+		<div class="redirect-title-box bottomright">
 			<h3 class="redirect-title"> Team </h3>
 		</div>
 	</div>
