--- a/voyager/templates/carousel/valve.html
+++ b/voyager/templates/carousel/valve.html
@@ -1,5 +1,6 @@
 <div class="title-divs valve-screen">
 	<div class="background-smolder carousel-smolder"></div>
+	<div class="title-logo-background"></div>
 	<div class="arrow-wrapper-left" data-value="amazon">
 		<div class="arrow-left"></div>
 	</div>
@@ -7,8 +8,11 @@
 		<div class="arrow-right"></div>
 	</div>
 	<div class="carousel-container">
-		<h1 class="main-title"> Valve </h1>
-		<p class="sub-title"> First line of text that is only used for filler purposes <br>
+		<!-- <h1 class="main-title"> Valve </h1> -->
+		<div class="title-logo">
+			<div class="valve-logo"></div>
+		</div>
+		<p class="sub-title-black"> First line of text that is only used for filler purposes <br>
 			Second line of text that is only used for filler purposes </p>
 <!-- 		<h2 class="sub-title"> First line of text that is only used for filler purposes</h2>
 		<h2 class="sub-title"> Second line of text that is only used for filler purposes</h2> -->
