--- a/voyager/templates/about.html
+++ b/voyager/templates/about.html
@@ -1,22 +1,26 @@
 {% include "header.html" %}
 <meta name="title" content="#navbar-about">
 <body>
-	<div class="picture about-picture"></div>
-	<div class="about-launch">
-		<div class="page-container">
-			<div class="about-wrapper">
-				<h2 class="page-title"> About </h2>
-				<div class="line-break"></div>
+	<div class="picture about-picture">
+		<h2 class="page-title"> About </h2>
+	</div>
+	<div class="about-panels">
+		<div class="six columns about-frame">
+			<div class="text-wrapper about-mission-text-height">
 				<h3 class="mission-title"> Mission </h3>
 				<p class="paragraph black">
 					Voyager was started to connect top tier talent at UC Berkeley with innovative companies in the Bay Area. The founders envisioned a future where companies and students could work together to collaboratively solve big problems. We do this by providing insightful deliverables that are actionable and align with a client's long term mission.
 				</p>
-				<h3 class="mission-title"> History </h3>
-				<p class="paragraph black">
-					Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
-					<br><br>
-					Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
-				</p>
+			</div>
+		</div>
+		<div class="six columns about-frame">
+		</div>
+	</div>
+	<div class="about-panels">
+		<div class="six columns about-frame">
+		</div>
+		<div class="six columns about-frame">
+			<div class="text-wrapper about-culture-text-height">
 				<h3 class="mission-title"> Culture </h3>
 				<p class="paragraph black">
 					We continually develop our consultants. We hold internal seminars, trainings, and professional events to help members advance their critical thinking and networking skills. Voyager also prides itself in its social culture. Each consulting team becomes close over the semester, bonded by multiple social events, activities, and retreats. At the heart of Voyager, there is more than a consulting club; there is a family of driven individuals who strive to create an enriching personal and professional experience for every member.
@@ -24,86 +28,152 @@
 			</div>
 		</div>
 	</div>
+	<div class="about-panels">
+		<div class="six columns about-frame">
+			<div class="text-wrapper about-history-text-height">
+				<h3 class="mission-title"> History </h3>
+				<p class="paragraph black">
+					Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
+					<br><br>
+					Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
+				</p>
+			</div>
+		</div>
+		<div class="six columns about-frame">
+		</div>
+	</div>
+	<!-- 	<div class="about-launch">
+			<div class="page-container">
+					<div class="about-wrapper">
+							<div class="line-break"></div>
+							<h3 class="mission-title"> Mission </h3>
+							<p class="paragraph black">
+									Voyager was started to connect top tier talent at UC Berkeley with innovative companies in the Bay Area. The founders envisioned a future where companies and students could work together to collaboratively solve big problems. We do this by providing insightful deliverables that are actionable and align with a client's long term mission.
+							</p>
+							<h3 class="mission-title"> History </h3>
+							<p class="paragraph black">
+									Voyager has partnered with clients across the tech spectrum with a proven track record of solving difficult, complex problems using fact-based, expert supported solutions. We have always valued recommending solutions that uphold the client's interest, supporting solutions with data, and working tirelessly to build the right strategy. Each team is built around each client and strives each and every day to craft an innovative solution that delivers direct value to a clients's goal and provides thorough insights for the future.
+									<br><br>
+									Even though Voyager was founded in the Fall of 2012, we have been growing fast. Our client list already includes notable companies such as Amazon, the National Basketball Association, and Instagram. And with less than 50 alumni and current members combined, we have already placed our consultants into firms such as Goldman Sachs and Bain & Company.
+							</p>
+							<h3 class="mission-title"> Culture </h3>
+							<p class="paragraph black">
+									We continually develop our consultants. We hold internal seminars, trainings, and professional events to help members advance their critical thinking and networking skills. Voyager also prides itself in its social culture. Each consulting team becomes close over the semester, bonded by multiple social events, activities, and retreats. At the heart of Voyager, there is more than a consulting club; there is a family of driven individuals who strive to create an enriching personal and professional experience for every member.
+							</p>
+					</div>
+			</div>
+	</div> -->
 	<div class="generic-whitespace"></div>
 	<div class="about-launch">
 		<div class="page-container">
 			<h2 class="page-title"> Leadership </h2>
+			<h3 class="executive-panel-title"> Executives </h3>
 			<div class="line-break"></div>
+			<div class="executive-box">
+				<div class="executive-member">
+					<div class="executive-picture felix-picture"></div>
+					<div class="executive-text">
+						Felix Liu
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture savan-picture"></div>
+					<div class="executive-text">
+						Savan Patel
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture olivia-picture"></div>
+					<div class="executive-text">
+						Olivia Gu
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture ted-picture"></div>
+					<div class="executive-text">
+						Ted Xiao
+					</div>
+				</div>
+				<div class="executive-member">
+					<div class="executive-picture philmon-picture"></div>
+					<div class="executive-text">
+						Philmon Tanuri
+					</div>
+				</div>
+			</div>
 			<!-- <h3 class="mission-title"> Executives </h3> -->
-			<div class="executive-box"></div>
-<!-- 			<div class="executive-member">
-				<div class="executive-picture savan-picture"></div>
-				<div class="executive-text">
-					<h3> President - Savan Patel </h3>
-					<p>
-						Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
-					</p>
-				</div>
+			<!-- <div class="executive-box"></div> -->
+			<!-- 			<div class="executive-member">
+					<div class="executive-picture savan-picture"></div>
+					<div class="executive-text">
+							<h3> President - Savan Patel </h3>
+							<p>
+									Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
+							</p>
+					</div>
 			</div>
 			<div class="executive-member">
-				<div class="executive-picture felix-picture"></div>
-				<div class="executive-text">
-					<h3> Vice President - Felix Liu </h3>
-					<p>
-					A Badass
-					</p>
-				</div>
+					<div class="executive-picture felix-picture"></div>
+					<div class="executive-text">
+							<h3> Vice President - Felix Liu </h3>
+							<p>
+								A Badass
+							</p>
+					</div>
 			</div>
 			<div class="executive-member">
-				<div class="executive-picture olivia-picture"></div>
-				<div class="executive-text">
-					<h3> Vice President - Olivia Gu </h3>
-					<p>
-						Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
-					</p>
-				</div>
+					<div class="executive-picture olivia-picture"></div>
+					<div class="executive-text">
+							<h3> Vice President - Olivia Gu </h3>
+							<p>
+									Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
+							</p>
+					</div>
 			</div>
 			<div class="executive-member">
-				<div class="executive-picture ted-picture"></div>
-				<div class="executive-text">
-					<h3> Vice President - Ted Xiao </h3>
-					<p>
-						Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
-					</p>
-				</div>
+					<div class="executive-picture ted-picture"></div>
+					<div class="executive-text">
+							<h3> Vice President - Ted Xiao </h3>
+							<p>
+									Savan is a third year studying Computer Science and Rhetoric. Within Voyager, he helped grow the club’s client base to include later stage and established tech companies by solidifying agreements with clients such as Amazon, Pinterest, Box and Twitch TV. This summer he interned at Box in the User Operations department and currently is a venture capital associate at DoubleRock. In his free time, he enjoys following his hometown Trailblazers and watching his favorite sitcom The League.
+							</p>
+					</div>
 			</div>
 			<div class="executive-member">
-				<div class="executive-picture philmon-picture"></div>
-				<div class="executive-text">
-					<h3> Vice President - Philmon Tanuri </h3>
-					<p>
-						Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
-					</p>
-				</div>
+					<div class="executive-picture philmon-picture"></div>
+					<div class="executive-text">
+							<h3> Vice President - Philmon Tanuri </h3>
+							<p>
+									Philmon is a third year double-majoring in Business Administration and Economics. Philmon joined Voyager during his freshman year and started as a consultant in the Box team. This past summer, he interned McKinsey & Company as a Business Analyst. He also currently sits on the International Board of Directors for YCAB Foundation, an Indonesian-based social enterprise that focuses on microfinance. During his free time, he enjoys playing basketball and watching the English Premier League.
+							</p>
+					</div>
 			</div> -->
-			<h3> Project Leaders </h3>
+			<div class="generic-whitespace"></div>
+			<h3 class="executive-panel-title"> Project Leaders </h3>
+			<div class="line-break"></div>
 			<div class="pl-members">
 				<div class="pl-picture-box">
 					<div class="pl-picture ajay-picture"></div>
 					<div class='pl-description'>
 						<div class='major-title'> Ajay Shanmugham </div>
-						Haashole
 					</div>
 				</div>
 				<div class="pl-picture-box">
 					<div class="pl-picture gwin-picture"></div>
 					<div class='pl-description'>
 						<div class='major-title'> Gwin Zhou </div>
-						Computer Science
 					</div>
 				</div>
 				<div class="pl-picture-box">
 					<div class="pl-picture sumedh-picture"></div>
 					<div class='pl-description'>
 						<div class='major-title'> Sumedh Bhattacharya </div>
-						EECS
 					</div>
 				</div>
 				<div class="pl-picture-box">
 					<div class="pl-picture sanchit-picture"></div>
 					<div class='pl-description'>
 						<div class='major-title'> Sanchit Shorewala </div>
-						I need to ask him
 					</div>
 				</div>
 			</div>
@@ -112,7 +182,7 @@
 	</div>
 	<div class="about-alumni">
 		<div class="page-container">
-			<h2 class="page-title black"> Alumni </h2>
+			<h1 class="executive-panel-title"> Alumni </h1>
 			<div class="line-break"></div>
 			<p class="paragraph black">
 				Check out our Careers page to see where recent members have gone to work. Alumni leverage their experiences and connections from Voyager to land positions at some of the leading institutions in management consulting, investment banking, and technology. Our alumni play an active role in mentoring Voyager members, leading training sessions, and providing advisory support to projects.
@@ -123,17 +193,28 @@
 				<div class="company bain"><div class="company-overlay"></div></div>
 				<div class="company morgan"><div class="company-overlay"></div></div>
 				<div class="company deloitte-picture"><div class="company-overlay"></div></div>
+				<div class="company mckinsey-picture"><div class="company-overlay"></div></div>
 				<!-- second row -->
 				<div class="company blackrock-picture"><div class="company-overlay"></div></div>
 				<div class="company accenture-picture"><div class="company-overlay"></div></div>
 				<div class="company credit-picture"><div class="company-overlay"></div></div>
 				<div class="company pwc-picture"><div class="company-overlay"></div></div>
+				<div class="company kkr-picture"><div class="company-overlay"></div></div>
 				<!-- third row -->
+				<div class="company wells-picture"><div class="company-overlay"></div></div>
+				<div class="company dot-picture"><div class="company-overlay"></div></div>
+				<div class="company facebook-picture"><div class="company-overlay"></div></div>
+				<div class="company zs-picture"><div class="company-overlay"></div></div>
+				<div class="company rdio-picture"><div class="company-overlay"></div></div>
+
+				<!-- fourth row -->
+				<div class="company cisco-picture"><div class="company-overlay"></div></div>
 				<div class="company apple-picture"><div class="company-overlay"></div></div>
 				<div class="company microsoft-picture"><div class="company-overlay"></div></div>
 				<div class="company linkedin-picture"><div class="company-overlay"></div></div>
+				<div class="company nest-picture"><div class="company-overlay"></div></div>
+				<!-- fifth row -->
 				<div class="company ebay-picture"><div class="company-overlay"></div></div>
-				<!-- fourth row -->
 				<div class="company surveymonkey-picture"><div class="company-overlay"></div></div>
 				<div class="company acrobat-picture"><div class="company-overlay"></div></div>
 				<div class="company google-picture"><div class="company-overlay"></div></div>
@@ -141,7 +222,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="generic-whitespace"></div>
+<!-- // Mckinsey, Cisco, Nest, Google, Box, Pimco, EY, Rdio, Altman-Landry, litman, department of treasury, IBM, Wells Fargo, KKR, Facebook, NBC, ZS Associates, Citrix -->
 
+	<div class="generic-whitespace"></div>
 </body>
 {% include "footer.html" %}
